<resources>
    <string name="app_name">IPlay</string>
    <string name="chat">Chat</string>
    <string name="title_activity_prova">prova</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="accedi_login">LOGIN</string>
    <string name="registrati_login">SIGN IN</string>
    <string name="fromSDA">from \nSDA</string>
    <string name="Login">GO!</string>
    <string name="event_create">Event</string>
    <string name="when_create">When</string>
    <string name="location_create">Location</string>
    <string name="description_create">Description</string>
    <string name="create_button">CREATE</string>
    <string name="name_profile">Robberto Federer</string>
    <string name="sports_profile">Sports</string>
    <string name="followers_profile">Followers</string>
    <string name="following_profile">Following</string>
    <string name="edit_button">Edit profile</string>
    <string name="title_sport">Sport</string>
    <string name="title_team">Team</string>
    <string name="number_sports">5</string>
    <string name="number_followers">650</string>
    <string name="number_following">193</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="viaroma_search">Via Roma</string>
    <string name="vianizza_search">Via Nizza</string>
    <string name="corsofrancia_search">Corso \nFrancia</string>
    <string name="sintetico_search">Campo: sintetico</string>
    <string name="erba_search">Campo: erba</string>
    <string name="ore2130_search">Ore 21:30</string>
    <string name="numgiocatori_search">Giocatori: 4/10</string>
    <string name="prezzo_search">Prezzo: 5€</string>
    <string name="scarpe_search">No scarpe tacchetti</string>
    <string name="parastinchi_search">Parastinchi</string>
    <string name="pallone_search">Pallone</string>
    <string name="pallone_image">Football</string>
    <string name="tennis_image">Tennis</string>
    <string name="volleyball_image">Volleyball</string>
    <string name="basketball_image">Basketball</string>
    <string name="create_instructions">Create your event</string>
    <string name="title_explore">Explore the events near you</string>
    <string-array name="spinnerSports">
        <item>Calcetto</item>
        <item>Pallacanestro</item>
        <item>Tennis</item>
        <item>Beach Volley</item>
        <item>Padel</item>
        <item>Golf</item>
    </string-array>
    <string name="tagFragmentCreate">tagFragmentCreate</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="font_family_Lato">sans-serif-Lato</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>