<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".create.CreateFragment"
    android:id="@+id/createFragment"
    android:tag="@string/tagFragmentCreate">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/create_instructions"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/eventTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/event_create"
                android:textSize="24dp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Spinner
                android:id="@+id/sportsSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:contextClickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventTextView" />

            <TextView
                android:id="@+id/whenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/when_create"
                android:textSize="24dp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/editTextDate"
                app:layout_constraintTop_toBottomOf="@+id/sportsSpinner" />

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/location_create"
                android:textSize="24dp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/locationEditText"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

            <EditText
                android:id="@+id/locationEditText"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Time"
                android:textSize="24dp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/editTextTime"
                app:layout_constraintTop_toBottomOf="@+id/locationEditText" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="342dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.449"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whenTextView" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="time"
                app:layout_constraintStart_toStartOf="@+id/locationEditText"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

            <TextView
                android:id="@+id/numPersoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="N. person"
                android:textSize="24dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/locationEditText"
                app:layout_constraintTop_toBottomOf="@+id/locationEditText" />

            <EditText
                android:id="@+id/numPersoneEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@+id/locationEditText"
                app:layout_constraintTop_toBottomOf="@+id/numPersoneTextView" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Price"
                android:textSize="24dp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/editTextTime"
                app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="@+id/priceTextView"
                app:layout_constraintTop_toBottomOf="@+id/priceTextView" />

            <Button
                android:id="@+id/createButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="55dp"
                android:backgroundTint="@color/orange"
                android:text="@string/create_button"
                android:textColor="@color/black"
                app:background="@drawable/create_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
</FrameLayout>