<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment"
    android:id="@+id/homepage"
    android:background="@color/backGroundGrey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-117dp"
        tools:layout_editor_absoluteY="-16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/imageViewCopertina"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/background_home"
                android:background="@drawable/background_home"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_baseline_person_24"
                android:background="@drawable/profile_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/followersButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:text="650"
                android:backgroundTint="@color/white"
                android:shadowColor="@color/black"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Robberto F."
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/sportsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="5"
                android:backgroundTint="@color/white"
                android:shadowColor="@color/black"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/followersButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/followingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="193"
                android:backgroundTint="@color/white"
                android:shadowColor="@color/black"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/followersButton"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/sportsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Sports"
                app:layout_constraintEnd_toEndOf="@+id/sportsButton"
                app:layout_constraintStart_toStartOf="@+id/sportsButton"
                app:layout_constraintTop_toBottomOf="@+id/sportsButton" />

            <TextView
                android:id="@+id/followersTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Followers"
                app:layout_constraintEnd_toEndOf="@+id/followersButton"
                app:layout_constraintStart_toStartOf="@+id/followersButton"
                app:layout_constraintTop_toBottomOf="@+id/followersButton" />

            <TextView
                android:id="@+id/followingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Following"
                app:layout_constraintEnd_toEndOf="@+id/followingButton"
                app:layout_constraintStart_toStartOf="@+id/followingButton"
                app:layout_constraintTop_toBottomOf="@+id/followingButton" />

            <TextView
                android:id="@+id/titleSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Sport"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleSports">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/football"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/calcetto"
                        android:src="@drawable/sport_icon_shape"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/footballTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/pallone_image"
                        app:layout_constraintEnd_toEndOf="@+id/football"
                        app:layout_constraintStart_toStartOf="@+id/football"
                        app:layout_constraintTop_toBottomOf="@+id/football" />

                    <ImageButton
                        android:id="@+id/tennis"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="30dp"
                        android:src="@drawable/sport_icon_shape"
                        android:background="@drawable/tennisapi"
                        app:layout_constraintStart_toEndOf="@+id/football"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tennisTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tennis_image"
                        app:layout_constraintEnd_toEndOf="@+id/tennis"
                        app:layout_constraintStart_toStartOf="@+id/tennis"
                        app:layout_constraintTop_toBottomOf="@+id/tennis" />

                    <ImageButton
                        android:id="@+id/beachvolley"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="30dp"
                        android:src="@drawable/sport_icon_shape"
                        android:background="@drawable/pallavolo"
                        app:layout_constraintStart_toEndOf="@+id/tennis"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/volleyballTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/volleyball_image"
                        app:layout_constraintEnd_toEndOf="@+id/beachvolley"
                        app:layout_constraintStart_toStartOf="@+id/beachvolley"
                        app:layout_constraintTop_toBottomOf="@+id/beachvolley" />

                    <ImageButton
                        android:id="@+id/basketball"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="30dp"
                        android:src="@drawable/sport_icon_shape"
                        android:background="@drawable/basket"
                        app:layout_constraintStart_toEndOf="@+id/beachvolley"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/basketballTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/basketball_image"
                        app:layout_constraintEnd_toEndOf="@+id/basketball"
                        app:layout_constraintStart_toStartOf="@+id/basketball"
                        app:layout_constraintTop_toBottomOf="@+id/basketball" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/titleTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Team"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView10" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/titleTeam"
                tools:layout_editor_absoluteX="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="154dp"
                    tools:layout_editor_absoluteY="1dp">

                    <ImageButton
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/donaldrectangle"
                        android:background="@drawable/profile_shape"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/redrectangle"
                        android:background="@drawable/profile_shape"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/profile_shape"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/whiterectangle"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/profile_shape"
                        android:src="@drawable/cinrectangle"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/addPersonButton"
                        android:layout_width="39dp"
                        android:layout_height="37dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_baseline_person_add_alt_1_24"
                        android:background="@drawable/new_person_shape"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView6"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </HorizontalScrollView>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="47dp"
                android:layout_height="39dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/tracciato"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/followersTextView" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/tracciato"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>